[workspace]
members = ["amqp",
    "rmf2_task_orchestrator",
    "workflow_executor",
]
resolver = "3"

[workspace.dependencies]
amqp = { path = "amqp" }
axum = "0.8.6"
crossflow = { git = "https://github.com/open-rmf/crossflow.git", branch = "main", features = ["diagram"] }
crossflow_diagram_editor = { git = "https://github.com/open-rmf/crossflow.git", branch = "main", features = ["frontend", "router"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"
reqwest = { version = "0.12.24", features = ["json"] }
workflow_executor = { path = "workflow_executor" }
lapin = { version = "3.7.2" }
rumqttc = "0.25.1"
