[package]
name = "rmf2_task_orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
cel-interpreter = "0.10.0"
config = "0.15.19"
crossflow = { git = "https://github.com/open-rmf/crossflow.git", branch = "main", features = ["diagram"] }
crossflow_diagram_editor = { git = "https://github.com/open-rmf/crossflow.git", branch = "main", features = ["frontend", "router"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-lite = "2.6"
futures-timer = "3.0"
lapin = "3.7.2"
reqwest = { version = "0.12.24", features = ["json"] }
rumqttc = "0.25.1"
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
