[package]
name = "workflow_executor"
version = "0.1.0"
edition = "2024"

[dependencies]
amqp = { workspace = true }
crossflow = { workspace = true }
crossflow_diagram_editor = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
jsonpath-rust = { workspace = true }
futures-timer = "3.0"
futures = "0.3"
futures-util = "0.3"
dashmap = "6.1.0"
lapin = { workspace = true }
rumqttc = { workspace = true }
r2r = { workspace = true }
uuid = { version = "1.19.0", features = ["v4"]}
